--- a/login.css
+++ b/login.css
@@ -8,6 +8,10 @@ body {
     background-color: #000;
     color: #fff;
 }
+header h1 a{
+    color:red;
+    margin:0;
+}
 
 .login-container {
     display: flex;
