--- a/pricing.css
+++ b/pricing.css
@@ -22,7 +22,7 @@ body {
 
 .header span {
     color: #fff;
-    background-color: #ff3366;
+    background-color: red;
     padding: 5px 10px;
     border-radius: 5px;
 }
@@ -41,7 +41,7 @@ body {
 }
 
 .title {
-    background-color: #ff3366;
+    background-color: red;
     padding: 10px;
     border-radius: 5px;
     font-size: 1.5em;
@@ -57,7 +57,7 @@ body {
 }
 
 .buy-now button {
-    background-color: #ff3366;
+    background-color: red;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -67,5 +67,5 @@ body {
 }
 
 .buy-now button:hover {
-    background-color: #ff6699;
+    background-color: red;
 }
