--- a/pricing.css
+++ b/pricing.css
@@ -15,13 +15,14 @@ body {
 
 .header {
     display: flex;
+    
     margin-bottom: 20px;
     padding: 0 10px;
 }
 
 .header span {
     color: #fff;
-    background-color:red;
+    background-color: #ff3366;
     padding: 5px 10px;
     border-radius: 5px;
 }
@@ -29,7 +30,14 @@ body {
 .pricing-table {
     display: flex;
     
-    margin-bottom: 70px;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+
+.labels, .column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .labels {
@@ -42,7 +50,6 @@ body {
 .labels .item {
     margin: 10px 0;
     text-align: left;
-    margin-bottom: 20px;
 }
 
 .column {
@@ -70,8 +77,7 @@ body {
 }
 
 .buy-now button {
-    background-color: red
-    ;
+    background-color: red;
     color: #fff;
     padding: 10px 20px;
     border: none;
@@ -83,3 +89,4 @@ body {
 .buy-now button:hover {
     background-color:red;
 }
+
