--- a/pricing.css
+++ b/pricing.css
@@ -30,12 +30,7 @@ body {
 .pricing-table {
     display: flex;
     justify-content: space-between;
-}
-
-.labels, .column {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    margin-bottom: 20px;
 }
 
 .labels {
@@ -48,7 +43,6 @@ body {
 .labels .item {
     margin: 10px 0;
     text-align: left;
-    font-weight: bold;
 }
 
 .column {
@@ -65,7 +59,6 @@ body {
     border-radius: 5px;
     font-size: 1.5em;
     margin-bottom: 20px;
-    text-align: center;
 }
 
 .item {
