--- a/summary.css
+++ b/summary.css
@@ -2,37 +2,66 @@ body {
     font-family: Arial, sans-serif;
     background-color: #000;
     color: #fff;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
     margin: 0;
 }
 
+nav {
+    background-color: #111;
+    padding: 10px 0;
+}
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+nav ul li {
+    margin: 0 15px;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    padding: 5px 10px;
+    border-radius: 5px;
+}
+
+nav ul li a:hover {
+    background-color: #ff3366;
+}
+
 .ordersummarycontainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: calc(100vh - 50px);
+}
+
+.ordersummary {
     border: 1px solid #ff3366;
     padding: 20px;
     border-radius: 10px;
     background-color: #111;
-}
-
-.ordersummary {
-    text-align: left;
+    width: 400px;
 }
 
 .ordersummary h2 {
     margin: 0;
     margin-bottom: 20px;
     font-size: 1.5em;
+    text-align: center;
 }
 
-.item {
+.summaryitem {
     display: flex;
     justify-content: space-between;
     margin-bottom: 10px;
 }
 
-.item span:first-child {
+.summaryitem span:first-child {
     font-weight: bold;
 }
 
@@ -73,7 +102,7 @@ body {
     background-color: #ff6699;
 }
 
-.completeorderbutton{
+.completeorderbutton {
     width: 100%;
     background-color: #ff3366;
     color: #fff;
@@ -88,3 +117,4 @@ body {
 .completeorderbutton:hover {
     background-color: #ff6699;
 }
+
