--- a/summary.css
+++ b/summary.css
@@ -2,35 +2,55 @@ body {
     font-family: Arial, sans-serif;
     background-color: #000;
     color: #fff;
-    margin: 0;
-}
-
-nav {
-    background-color: #111;
-    padding: 10px 0;
-}
-
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
-}
-
-nav ul li {
-    margin: 0 15px;
-}
-
-nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    padding: 5px 10px;
-    border-radius: 5px;
-}
-
-nav ul li a:hover {
-    background-color: #ff3366;
+    margin: 0;}
+    
+    header h1 a{
+        color:red;
+        margin:0;
+    }
+    header {
+        background-color: #000;
+        padding: 20px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .container {
+        display: flex;
+        align-items: center;
+    }
+    
+    header h1 a{
+        color:red;
+        margin:0;
+    }
+    .logo h1  {
+        color: #ff0000;
+        margin: 0;
+    }
+    
+    nav ul {
+        list-style: none;
+        display: flex;
+        margin: 0;
+        padding: 0;
+    }
+    
+    nav ul li {
+        margin-left: 20px;
+    }
+    
+    nav ul li a {
+        color: #fff;
+        text-decoration: none;
+    }
+    
+    .client-area {
+        background-color: #ff0000;
+        padding: 10px 20px;
+        color: #fff;
+        text-decoration: none;
 }
 
 .ordersummarycontainer {
