--- a/payment.css
+++ b/payment.css
@@ -6,37 +6,49 @@ body {
     padding: 0;
 }
 
-nav {
-    background-color: #222;
-    padding: 10px 0;
+header {
+    background-color: #000;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+}
+
+header h1 a{
+    color:red;
+    margin:0;
+}
+.logo h1  {
+    color: #ff0000;
+    margin: 0;
 }
 
 nav ul {
     list-style: none;
     display: flex;
-    justify-content: center;
     margin: 0;
     padding: 0;
 }
 
 nav ul li {
-    margin: 0 15px;
+    margin-left: 20px;
 }
 
 nav ul li a {
     color: #fff;
     text-decoration: none;
-    font-weight: bold;
 }
 
-nav ul li a:hover {
-    text-decoration: underline;
-}
-
-.container {
-    display: flex;
-    justify-content: space-around;
-    padding: 20px;
+.client-area {
+    background-color: #ff0000;
+    padding: 10px 20px;
+    color: #fff;
+    text-decoration: none;
 }
 
 .billing-details, .order-summary, .payment-method {
