--- a/payment.css
+++ b/payment.css
@@ -57,7 +57,7 @@ nav ul li a {
     padding: 20px;
 }
 .container, .billingdetails {
-    margin-top: 200px;
+    margin-bottom: 200px;
 }
 
 .billingdetails, .ordersummary, .paymentmethod {
