--- a/payment.css
+++ b/payment.css
@@ -57,20 +57,18 @@ nav ul li a {
     padding: 20px;
 }
 
-
 .billingdetails, .ordersummary, .paymentmethod {
     background-color: #222;
-    padding: 10px;
+    padding: 20px;
     border-radius: 10px;
     width: 30%;
 }
 
-
-
-h2 {
+.billingdetails h2, .paymentmethod h2, .ordersummary h2 {
     color: #e60000;
     border-bottom: 2px solid #e60000;
     padding-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 label {
