--- a/payment.css
+++ b/payment.css
@@ -54,10 +54,8 @@ nav ul li a {
 .container {
     display: flex;
     justify-content: space-around;
+    align-items: flex-start;
     padding: 20px;
-}
-.container input {
-    margin-right: 100px;
 }
 
 .billingdetails, .ordersummary, .paymentmethod {
@@ -71,7 +69,7 @@ nav ul li a {
     color: #e60000;
     border-bottom: 2px solid #e60000;
     padding-bottom: 10px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 label {
