--- a/payment.css
+++ b/payment.css
@@ -70,6 +70,10 @@ nav ul li a {
     border-bottom: 2px solid #e60000;
     padding-bottom: 10px;
     margin-bottom: 20px;
+    
+}
+.ordersummary, .orderdetails{
+    margin-top: 20px;
 }
 
 label {
