--- a/submit.css
+++ b/submit.css
@@ -154,5 +154,5 @@ footer {
     font-size: 16px;
     background-color: #222;
     width: 50%; 
-    margin-right: 50px;
+    margin-left: 50px;
 }
