--- a/payment.css
+++ b/payment.css
@@ -105,6 +105,10 @@ button {
     width: 100%;
     margin-top: 20px;
 }
+form button a {
+    font-size: 10px;
+}
+
 
 button:hover {
     background-color: #cc0000;
