--- a/blogs.css
+++ b/blogs.css
@@ -1,4 +1,4 @@
-/* General Styles */
+
 body {
     font-family: Arial, sans-serif;
     background-color: #121212;
@@ -6,38 +6,53 @@ body {
     margin: 0;
     padding: 0;
 }
-
-/* Navbar */
-.navbar {
-    background-color: #222;
-    padding: 10px 20px;
+header {
+    background-color: #000;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.navbar ul {
-    list-style-type: none;
+.container {
+    display: flex;
+    align-items: center;
+}
+
+header h1 a{
+    color:red;
+    margin:0;
+}
+.logo h1  {
+    color: #ff0000;
+    margin: 0;
+}
+
+nav ul {
+    list-style: none;
+    display: flex;
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: space-around;
 }
 
-.navbar ul li {
-    display: inline;
+nav ul li {
+    margin-left: 20px;
 }
 
-.navbar ul li a {
+nav ul li a {
     color: #fff;
     text-decoration: none;
+}
+
+.client-area {
+    background-color: #ff0000;
     padding: 10px 20px;
-    display: block;
+    color: #fff;
+    text-decoration: none;
 }
 
-.navbar ul li a:hover {
-    background-color: #444;
-    border-radius: 5px;
-}
 
-/* Blogs Section */
+
 .blogs {
     padding: 50px 20px;
     text-align: center;
