--- a/mainpage.css
+++ b/mainpage.css
@@ -1,4 +1,4 @@
-/* General Styles */
+
 body {
     font-family: Arial, sans-serif;
     background-color: #121212;
@@ -12,7 +12,6 @@ body {
     height: 100vh;
 }
 
-/* Sidebar */
 .sidebar {
     width: 250px;
     background-color: #e50914;
@@ -40,7 +39,7 @@ body {
 }
 
 .navmenu ul {
-    list-style-type: none;
+    
     padding: 0;
     width: 100%;
 }
@@ -62,12 +61,12 @@ body {
     background-color: #b00710;
 }
 
-/* Main Content */
+
 .maincontent {
-    flex-grow: 1;
+
     background-color: #1b1b1b;
     padding: 20px;
-    overflow-y: auto;
+    
 }
 
 header {
@@ -96,7 +95,7 @@ header {
     align-items: center;
 }
 
-.showallbtn, newchallengebtn {
+.showallbtn {
     background-color: #e50914;
     color: #fff;
     padding: 10px 20px;
@@ -104,15 +103,15 @@ header {
     cursor: pointer;
     margin-left: 10px;
     border-radius: 5px;
-    transition: background-color 0.3s;
+    
 }
 
 .newchallengebtn:hover, showallbtn:hover {
     background-color: #b00710;
 }
 
-/* Account Section */
-accountsection {
+
+.accountsection {
     display: flex;
     flex-direction: column;
     gap: 20px;
